<resources>
    <string name="app_name">Bathing Sites</string>
    <string name="action_settings">Settings</string>
    <string name="bathingsites_number_of_text">Bathing Sites</string>
    <string name="title_activity_new_bathing_site">New Bathing Site</string>
    <string name="newbathingsite_namehint">Name</string>
    <string name="newbathingsite_descriptionhint">Description</string>
    <string name="newbathingsite_addresshint">Address</string>
    <string name="newbathingsite_longitudehint">Longitude</string>
    <string name="newbathingsite_latitudehint">Latitude</string>
    <string name="newbathingsite_ratinglabel">Rating:</string>
    <string name="newbathingsite_watertemphint">Water temp</string>
    <string name="newbathingsite_datehint">Date YYYY-MM-DD</string>
    <string name="newbathingsite_nameerror">Name is required.</string>
    <string name="newbathingsite_addresserror">Address is required.</string>
    <string name="newbathingsite_longitudeerror">Longitude is required.</string>
    <string name="newbathingsite_latitudeerror">Latitude is required.</string>
    <string name="title_activity_download_bathing_sites">DownloadBathingSitesActivity</string>
    <string name="action_download">Download</string>
    <string name="title_activity_bathing_sites_map">Map</string>
    <string name="action_map">Map</string>
    <string name="preference_weather_url_title">Weather Location</string>
    <string name="preference_download_url_title">Download Location</string>
    <string name="title_activity_my_settings">Settings</string>
    <string name="preference_map_search_distance_title">Map search distance(km)</string>
    <string name="bathingsitesmap_permission_location_denied">Map functionality not available without permission.</string>
    <string name="bathingsitesmap_marker_click_title">Bathing site information</string>
    <string name="downloadbathingsites_permission_externalstorage_denied">No downloads will be made without permission.</string>
    <string name="all_bathingsites_persisted">Bathing sites were successfully persisted.</string>
    <string name="all_bathingsites_persist_error">An error occurred while persisting bathing sites.</string>
    <string name="downloadbathingsites_download_error">Something went wrong downloading bathing sites, check your settings</string>
    <string name="preference_mapdistance_nonvalid">Only numbers allowed, changes not saved.</string>
    <string name="preferences_url_nonvalid">Malformed URL, changes not saved.</string>
    <string name="all_bathingsite_persisted">Bathing site was successfully persisted</string>
    <string name="all_bathingsite_persist_error">An error occurred while persisting bathing site. Does the location already exist?</string>
    <string name="newbathingsite_weather_error">Something went wrong downloading weather data, check your settings and location input</string>
    <string name="newbathingsite_weather_dialog_title">Current Weather</string>
    <string name="all_ok">OK</string>
    <string name="all_externalstorage_unavailable">External storage not available.</string>
    <string name="bathingsitesview_numberofbathingsites">%1$d Bathing Sites</string>
    <string name="all_coordinates">Coordinates:</string>
    <string name="all_rating">Rating:</string>
    <string name="all_temperature">Temperature:</string>
    <string name="all_date">Date:</string>
</resources>
